# solidity-ibc-eureka

./: .gitignore  bun.lockb
contracts/: compile.sh
contracts/data/: tmp.abi
contracts/interfaces/: IMembership.sol  IUpdateClient.sol
contracts/light-clients/: SP1ICS07Tendermint.sol
contracts/light-clients/errors/: ISP1ICS07TendermintErrors.sol
contracts/light-clients/msgs/: IICS07TendermintMsgs.sol  IMisbehaviourMsgs.sol  IUpdateClientMsgs.sol
contracts/msgs/: IMembershipMsgs.sol
contracts/programs/: Membership.sol  Misbehaviour.sol  UpdateClient.sol
contracts/utils/: Predicates.sol  PredicatesVerifier.sol  VotingPowerCalculator.sol
e2e/interchaintestv8/: go.mod
operator/: go.mod  go.sum  main.go
operator/bindings/ICS20Transfer/: binding.go
operator/bindings/ICS26Router/: binding.go
operator/bindings/Membership/: binding.go
operator/bindings/Misbehaviour/: binding.go
operator/bindings/SP1ICS07Tendermint/: binding.go
operator/bindings/UpdateClient/: binding.go
operator/client/: tendermint.go
programs/solana/: Cargo.toml
programs/solana/tests/litesvm-tests/: Cargo.toml  README.md  TESTING.md  check-setup.sh  check_structure.sh  run-tests.sh  test.sh  verify-compile.sh
programs/solana/tests/litesvm-tests/src/: fixtures.rs  lib.rs  utils.rs
programs/solana/tests/litesvm-tests/tests/: check_compile.rs  cross_program_test.rs  integration_test.rs  minimal_test.rs
test/solidity-ibc/: FixtureTest.t.sol
test/sp1-ics07/: Misbehaviour.t.sol  SP1ICS07MockTest.sol  SP1ICS07TendermintTest.sol
